tests/error/empty_obj_data.gw
class C
{
	int i;
}

C @c;
c.i;
